trying to fix dark mode issues

--- a/src/assets/css/list-grid.theme.scss
+++ b/src/assets/css/list-grid.theme.scss
@@ -7,11 +7,6 @@
 
   // Colors
 
-  .active{
-    border-color: mat-color($primary, 500);
-    background-color: mat-color($primary, 100);
-  }
-
   ul.list-grid-container {
     background: mat-color($background);
 
